--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.2.16",
     "next-images": "^1.8.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.59.7",
