--- a/package.json
+++ b/package.json
@@ -1,35 +1,38 @@
 {
-  "name": "hempack",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@gsap/react": "^2.1.1",
-    "gsap": "^3.12.5",
-    "next": "14.2.16",
-    "next-images": "^1.8.5",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.3.0",
-    "swiper": "^11.1.14"
-  },
-  "devDependencies": {
-    "@tanstack/eslint-plugin-query": "^5.59.7",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.16",
-    "eslint-plugin-tailwindcss": "^3.17.5",
-    "postcss": "^8",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "hempack",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d out"
+    },
+    "dependencies": {
+        "@gsap/react": "^2.1.1",
+        "gsap": "^3.12.5",
+        "next": "14.2.16",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-icons": "^5.3.0",
+        "swiper": "^11.1.14"
+    },
+    "devDependencies": {
+        "@tanstack/eslint-plugin-query": "^5.59.7",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.16",
+        "eslint-plugin-tailwindcss": "^3.17.5",
+        "gh-pages": "^6.2.0",
+        "postcss": "^8",
+        "prettier": "^3.3.3",
+        "prettier-plugin-tailwindcss": "^0.6.8",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    },
+    "hompage": "https://gpal4434.github.io/hempack/"
 }
