--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
-        "build": "next build",
+        "dev": "next dev -p 7777",
         "start": "next start",
         "lint": "next lint",
         "predeploy": "npm run build",
