--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@gsap/react": "^2.1.1",
         "gsap": "^3.12.5",
+        "jotai": "^2.10.3",
         "next": "14.2.16",
         "react": "^18",
         "react-dom": "^18",
